[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/source/States/Hook.gd" type="Script" id=1]
[ext_resource path="res://Player/source/States/Air.gd" type="Script" id=2]
[ext_resource path="res://Player/source/States/Run.gd" type="Script" id=3]
[ext_resource path="res://Player/source/States/Idle.gd" type="Script" id=4]
[ext_resource path="res://Player/source/Skin.tscn" type="PackedScene" id=5]
[ext_resource path="res://Combat/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/source/PassThroughController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/source/States/Spawn.gd" type="Script" id=8]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=9]
[ext_resource path="res://Player/source/States/Die.gd" type="Script" id=10]
[ext_resource path="res://Player/source/Player.gd" type="Script" id=11]
[ext_resource path="res://Player/source/States/Move.gd" type="Script" id=12]
[ext_resource path="res://Player/source/AudioPlayer.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 14 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 10
script = ExtResource( 11 )

[node name="Skin" parent="." instance=ExtResource( 5 )]

[node name="AudioPlayer" parent="." instance=ExtResource( 13 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, -6.5 )
shape = SubResource( 1 )

[node name="PassThroughController" parent="." instance=ExtResource( 7 )]

[node name="Hitbox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.5, -16 )
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 9 )
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
max_speed_default = Vector2( 200, 2000 )
max_fall_speed = 450.0
decceleration_default = Vector2( 1500, 3000 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 4 )

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Idle"]
wait_time = 0.1
one_shot = true

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )
max_sprint_speed = 300.0
sprint_footstep_sound_speed = 0.35

[node name="FootStepsTimer" type="Timer" parent="StateMachine/Move/Run"]
wait_time = 0.5

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 2 )
acceleration_x = 2500.0

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.3
one_shot = true

[node name="Hook" type="Node" parent="StateMachine"]
script = ExtResource( 1 )
